# langgraph-agent-platform

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: graph.py  memory.py  state.py
backend/app/agents/nodes/: analyzer.py  researcher.py  reviewer.py  writer.py
backend/app/agents/tools/: calculator.py  code_executor.py  web_search.py
backend/app/api/: websocket.py
backend/app/api/routes/: agents.py  health.py  workflows.py
backend/app/models/: schemas.py
backend/app/services/: checkpoint.py  workflow_engine.py
backend/tests/: test_agents.py  test_api.py  test_graph.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/agent/: route.ts
web/app/demo/: page.tsx
web/app/live/: page.tsx
web/components/: AgentCard.tsx  FeatureCard.tsx  Footer.tsx  Header.tsx  LiveAgentRun.tsx  StateTimeline.tsx  WorkflowVisualizer.tsx
